# claude-swap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: upstream-sync.md
src/claude_swap/: __init__.py  autoswitch.py  cache.py  claude_locks.py  cli.py  credential_refresh.py  credentials.py  exceptions.py  json_output.py  list_reporter.py  locking.py  logging_config.py  mappings.py  menubar.py  migrations.py  models.py  monitor.py  oauth.py  paths.py  poll_policy.py  printer.py  process_detection.py  protocols.py  sequence_store.py  service.py  service_spec.py  session.py  settings.py  snapshot_source.py  switch_cli.py  switcher.py  transfer.py  tui.py  update_check.py  usage_cache.py  usage_policy.py  usage_store.py
src/claude_swap/service_backends/: __init__.py  launchd.py  systemd.py  task_scheduler.py
src/claude_swap/tui/: __init__.py  app.py  autoview.py  cswap.tcss  dashboard.py  data.py  modals.py  theme.py  widgets.py
tests/: conftest.py  test_active_usage.py  test_api_key_accounts.py  test_auto_switch.py  test_autoswitch.py  test_backup_sync_gates.py  test_cache.py  test_ci_contract.py  test_claude_locks.py  test_cli.py  test_config_cli.py  test_credentials.py  test_credentials_store.py  test_json_output.py  test_locking.py  test_logging_config.py  test_mappings.py  test_menubar.py  test_migrations.py  test_monitor_service_mode.py  test_oauth.py  test_paths.py  test_pending_rotation.py  test_poll_policy.py  test_printer.py  test_process_detection.py  test_protocols.py  test_sequence_store.py  test_service.py  test_session.py  test_settings.py  test_switch_strategy.py  test_switch_to_same_slot.py  test_switcher.py  test_switcher_add_account.py  test_switcher_broken_slots.py  test_switcher_purge.py  test_switcher_switch.py  test_transfer.py  test_transfer_rollback.py  (+4 more)
tests/service_backends/: test_systemd.py  test_task_scheduler.py
