[project]
name = "claude-swap"
version = "0.16.0b1+haotool.1"
description = "Multi-account switcher for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.0.0",
    "truststore>=0.10.4",
]
authors = [{name = "Onur Cetinkol", email = "onurcetinkol@gmail.com"}]
license = {text = "MIT"}
keywords = ["claude", "claude-code", "account-switcher", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/haotool/claude-swap"
Repository = "https://github.com/haotool/claude-swap"
Issues = "https://github.com/haotool/claude-swap/issues"

[project.scripts]
claude-swap = "claude_swap.cli:main"
cswap = "claude_swap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swap"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.20",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"
line-length = 88

[tool.mypy]
# The whole package is strict; `uv run mypy` (pre-commit) and
# `mypy --strict src/claude_swap` (CI) check the same thing.
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src/claude_swap"]
ignore_missing_imports = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "no_keychain_fake: opt out of the autouse in-memory Keychain guard (test mocks subprocess itself, or runs against a temp keychain on GitHub Actions)",
]
